# chatter

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  get-auth-token.js  package-lock.json  package.json  set-local-storage.js
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202504281041_initial.py  202504291006_add_created_at_to_conversations.py  202504291924_add_mcp_tools_table.py  202504301546_add_mcp_tool_uses_table.py  202505011325_initial.py  202505011353_tttt.py  202505011356_init.py  202505021413_initial.py  202505021527_remove_super_user.py  202505051727_remove_name_column.py  202505051821_add_constraints.py  202505060758_provider_column_remove_meta.py  202505060810_provider_column_not_null.py  202505131509_remove_config_col_add_preconfigured.py  202505141142_add_unique_code.py  202505141310_remove_preconfigured_tools.py  202505161403_add_config_type.py  202505161449_add_config_type.py  202505161501_make_type_non_null.py  202505161711_user_created_at.py  202505161714_user_created_at_not_null.py  545c5659fc3f_initial_migration.py  925eb6981945_create_initial_tables.py  add_uuid_default.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  api_keys.py  auth.py  chat.py  conversations.py  llms.py  mcp_configs.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  api_key.py  conversation.py  mcp_config.py  mcp_tool.py  mcp_tool_use.py  message.py  preconfigured_mcp_config.py  preconfigured_mcp_tool.py  user.py
backend/app/schemas/: __init__.py  api_key.py  auth.py  chat.py  conversation.py  mcp_config.py  mcp_tool.py  message.py  user.py
backend/app/services/: __init__.py  api_key.py  chat.py  conversation.py  mcp.py  mcp_config.py  preconfigured_mcp_config.py  user.py
backend/fixtures/: create_fixtures.py
backend/scripts/: 02-init-db.sh  03-docker-test.sh
backend/tests/: conftest.py  test_auth_api.py  test_conversation_service.py  test_user_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: LoginPage.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ToolCallMessage.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/ui/: Alert.tsx  ApiKeyManagerModal.tsx  ApiKeyModal.tsx  DropdownMenu.tsx  FormErrors.tsx  LlmSelector.tsx  LoadingSpinner.tsx  McpConfigModal.tsx  SettingsButton.tsx  modal.tsx  types.ts
frontend/src/context/: AuthContext.tsx  GlobaSettingsContext.ts  LlmContext.tsx  MCPConfigContext.ts  NewConversationContext.tsx
frontend/src/services/: mcpService.ts  modelService.ts
frontend/src/types/: index.ts
frontend/src/util/: api.ts  ui.ts  validation.ts
localstack/: 01-init-kms.sh  02-verify-kms.sh  Dockerfile  cleanup-kms.sh  init-kms.sh  verify-kms.sh
scripts/: 02-init-db.sh  copy-scripts.sh  create-superuser.py  docker-test.sh  generate-migration.sh  init-db.sh  reset-dev.sh  run-backend.sh  run-frontend.sh  start-dev.sh  stop-dev.sh
