[project]
name = "chat-platform-backend"
version = "0.1.0"
description = "API for a model-agnostic chat platform with tool use using MCP"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]>=0.115.12,<1",
    "uvicorn[standard]>=0.34.2,<1",
    "alembic>=1.15,<2",
    "bcrypt>=4.3.0,<5",
    "google-auth>=2.39.0,<3",
    "google>=3.0.0,<4",
    "google-genai>=1.12.1,<2",
    "openai>=1.76.0,<2",
    "mcp>=1.8.0,<2",
    "python-dotenv>=1.1.0,<2",
    "alembic-postgresql-enum>=1.7.0,<2",
    "litellm>=1.67.5,<2",
    "result>=0.17.0,<1",
    "sqlalchemy>=2.0.40,<3",
    "pydantic>=2.11.4,<3",
    "asyncpg>=0.30.0,<1",
    "httpx>=0.28.1,<1",
    "sse-starlette>=2.3.4,<3",
    "python-jose[cryptography]>=3.4.0,<4",
    "fastmcp>=2.3.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "aiosqlite",  # For testing
]

dev = [
    "ruff>=0.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["ANN", "E501", "F401", "RET504", "S101", "B904", "F841"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy", "alembic", "jose", "passlib", "boto3", "httpx"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.7",
]
